# demonware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bdConnection/: CMakeLists.txt
bdCore/: CMakeLists.txt  bdCore.h
bdCore/bdContainers/: bdArray.h  bdArray.inl  bdBitBuffer.h  bdBitBuffer.inl  bdBitBufferTypes.h  bdByteBuffer.cpp  bdByteBuffer.h  bdFastArray.h  bdHashMap.h  bdHashMap.inl  bdLinkedList.h  bdLinkedList.inl  bdNonce.h  bdNonce.inl  bdPriorityQueue.h  bdQueue.h  bdQueue.inl  bdSequenceNumber.cpp  bdSequenceNumber.h  bdSequenceNumberStore.cpp  bdSequenceNumberStore.h  bdSet.h  bdSingleton.cpp  bdSingleton.h
bdCore/bdCrypto/: bdCrypto.h  bdCryptoUtils.cpp  bdCryptoUtils.h  bdCypher.cpp  bdCypher.h  bdCypher3DES.cpp  bdCypher3DES.h  bdCypherAES.cpp  bdCypherAES.h  bdECCKey.cpp  bdECCKey.h  bdHMac.cpp  bdHMac.h  bdHMacSHA1.cpp  bdHMacSHA1.h  bdHash.cpp  bdHash.h  bdHashMD5.cpp  bdHashMD5.h  bdHashTiger192.cpp  bdRSAKey.cpp  bdRSAKey.h
bdCore/bdMemory/: bdAlignedOffsetMemory.cpp  bdAlignedOffsetMemory.h  bdDefaultMemory.h  bdMallocMemory.cpp  bdMallocMemory.h  bdMemory.cpp  bdMemory.h
bdCore/bdReference/: bdReferencable.h  bdReferencable.inl  bdReference.h  bdReference.inl
bdCore/bdSocket/: bdAddr.cpp  bdAddr.h  bdCommonAddr.cpp  bdCommonAddr.h  bdCommonAddrInfo.cpp  bdCommonAddrInfo.h  bdEndpoint.cpp  bdEndpoint.h  bdInetAddr.cpp  bdInetAddr.h  bdPort.h  bdSecurityID.cpp  bdSecurityID.h  bdSecurityInfo.cpp  bdSecurityInfo.h  bdSecurityKey.cpp  bdSecurityKey.h  bdSocket.cpp  bdSocket.h  bdStreamSocket.cpp  bdStreamSocket.h
bdCore/bdString/: bdString.h
bdCore/bdThread/: bdMutex.cpp  bdMutex.h  bdRunnable.cpp  bdRunnable.h  bdThread.cpp  bdThread.h
bdCore/bdTiming/: bdStopwatch.cpp  bdStopwatch.h
bdCore/bdUtilities/: bdBase64.cpp  bdBase64.h  bdBitOperations.cpp  bdBitOperations.h  bdBytePacker.cpp  bdBytePacker.h  bdFactory.h  bdFactory.inl  bdRandom.cpp  bdRandom.h  bdTrulyRandom.h
bdCore/bdmemory/: bdAlignedOffsetMemory.cpp  bdAlignedOffsetMemory.h  bdMallocMemory.cpp
bdCore/bdthread/: bdRunnable.cpp
bdLobby/: CMakeLists.txt
bdLobby/bdRemoteTaskManager/: bdRemoteTask.cpp
bdNet/: CMakeLists.txt
bdPlatform/: CMakeLists.txt  bdPlatform.h
bdPlatform/bdPlatformCoretypes/: bdPlatformCoreTypes.h
bdPlatform/bdPlatformError/: bdPlatformError.cpp  bdPlatformError.h
bdPlatform/bdPlatformLog/: bdPlatformLog.cpp  bdPlatformLog.h
bdPlatform/bdPlatformMemory/: bdPlatformMemory.h
bdPlatform/bdPlatformPatterns/: bdLinkable.cpp  bdLinkable.h
bdPlatform/bdPlatformRandom/: bdPlatformTrulyRandom-win32.cpp  bdPlatformTrulyRandom.h
bdPlatform/bdPlatformSocket/: bdInAddr.cpp  bdInAddr.h  bdPlatformSocket.cpp  bdPlatformSocket.h  bdPlatformStreamSocket-win32.cpp  bdPlatformStreamSocket.h
bdPlatform/bdPlatformString/: bdPlatformString-win32.cpp  bdPlatformString.h
bdPlatform/bdPlatformThread/: bdPlatformMutex.cpp  bdPlatformMutex.h  bdPlatformThread-win32.cpp  bdPlatformThread.h
bdPlatform/bdPlatformTiming/: bdPlatformTiming-win32.cpp  bdPlatformTiming.h
bdPlatform/bdplatformlog/: bdPlatformLog.cpp
bdPlatform/bdplatformpatterns/: bdLinkable.cpp
src/: CMakeLists.txt
src/T5/: CMakeLists.txt
src/T5/bdcore/bdcontainers/: bdarray.inl  bdfastarray.inl  bdsingleton.h  bdsingleton.inl
src/T5/bdcore/bdreference/: bdreference.inl
src/T5/bdcore/bdutilities/: bdfactory.inl
src/T5/bdplatform/bdplatformstring/: bdplatformstring.inl
src/T6/: CMakeLists.txt
src/T6/bdconnection/: bdconnectionstatistics.cpp  bdconnectionstore.cpp  bdunicastconnection.cpp
src/T6/bdconnection/bddispatch/: bddispatcher.cpp
src/T6/bdconnection/bdmessage/: bdmessage.cpp  bdmessage.h  bdreceivedmessage.cpp
src/T6/bdconnection/bdpacket/: bdchunk.cpp  bdcookie.cpp  bdcookieackchunk.cpp  bdcookieechochunk.cpp  bddatachunk.cpp  bdheartbeatackchunk.cpp  bdinitackchunk.cpp  bdinitchunk.cpp  bdpacket.cpp  bdsackchunk.cpp  bdshutdownackchunk.cpp  bdshutdownchunk.cpp
src/T6/bdconnection/bdwindow/: bdreliablereceivewindow.cpp  bdreliablesendwindow.cpp  bdreliablesendwindow.h  bdunreliablereceivewindow.cpp  bdunreliablesendwindow.cpp
src/T6/bdcore/: bdcore.cpp
src/T6/bdcore/bdcontainers/: bdarray.inl  bdbitbuffer.cpp  bdbitbuffer.inl  bdbytebuffer.cpp  bdbytebuffer.inl  bdfastarray.inl  bdhashmap.h  bdhashmap.inl  bdlinkedlist.inl  bdsequencenumber.cpp  bdsequencenumberstore.cpp  bdsingleton.inl
src/T6/bdcore/bdcrypto/: bdcryptoutils.cpp  bdecckey.cpp  bdhashmd5.cpp  bdhmacsha1.cpp  bdrsakey.cpp
src/T6/bdcore/bdmemory/: bdalignedoffsetmemory.cpp  bdmallocmemory.cpp  bdmemory.cpp
src/T6/bdcore/bdreference/: bdreference.inl
src/T6/bdcore/bdsocket/: bdaddr.cpp  bdcommonaddr.cpp  bdcommonaddrinfo.cpp  bdendpoint.cpp  bdsecurityid.cpp  bdsocket.cpp  bdstreamsocket.cpp
src/T6/bdcore/bdthread/: bdrunnable.cpp  bdsemaphore.cpp  bdthread.cpp
src/T6/bdcore/bdtiming/: bdstopwatch.cpp
src/T6/bdcore/bdutilities/: bdbase64.cpp  bdbytepacker.cpp  bdbytepacker.h  bdrandom.cpp
src/T6/bdlobby/: bdauthservice-steam.cpp  bdauthservice.cpp  bdauthticket.cpp  bdlobbyconnection.cpp  bdlobbyeventhandler.cpp  bdlobbyservice.cpp
src/T6/bdlobby/bdanticheat/: bdanticheatchallenge.cpp  bdanticheatchallengeparam.cpp  bdanticheatresponses.cpp
src/T6/bdlobby/bdcontentstreaming/: bdcontentstreaming.cpp  bdcontentstreamingbase.cpp  bdprecopyresult.cpp  bdsummarymetahandler.cpp  bdurl.cpp
src/T6/bdlobby/bddml/: bddml.cpp  bddmlhierarchicalinfo.cpp  bddmlinfo.cpp
src/T6/bdlobby/bdeventlog/: bdeventlog.cpp
src/T6/bdlobby/bdfeatureban/: bdfeaturebaninfo.cpp
src/T6/bdlobby/bdgroup/: bdgroup.cpp
src/T6/bdlobby/bdhttpwrapper/: bdhttpwrapper-curl.cpp  bdhttpwrapperbase.cpp
src/T6/bdlobby/bdkeyarchive/: bdkeyarchive.cpp
src/T6/bdlobby/bdleague/: bdgenericleagueid.cpp  bdleague.cpp  bdleaguestatsinfo.cpp  bdleaguesubdivisionresult.cpp  bdleagueteaminfo.cpp
src/T6/bdnet/: bdnet.cpp  bdnetstartparams.cpp
src/T6/bdsocket/: bdaddrhandle.cpp  bdaddrhandlerefwrapper.cpp  bdpacketbuffer.cpp  bdservicebandwidtharbitrator.cpp  bdsocketrouter.cpp  bdsocketrouterconfig.cpp
(+98 files in other folders)
